EVSRESTAPI-293: Add data from P374 for subset link (#155)
* Add data from P374 for subset link

* Work through HGNC stardog timeout

* Add testing concept for P374

* Some tuning to get reports working

* Reorg roles queries to run without timout

* Small fix for test

Co-authored-by: bcarlsenca <brian@ciitizen.com>

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -376,7 +376,8 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
+      ?z owl:unionOf/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?x_concept . \
@@ -390,9 +391,43 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
-        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
-          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
+      ?z owl:intersectionOf/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+        ( owl:unionOf/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/owl:unionOf/rdf:rest*/rdf:first \
+        ) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+        ( owl:intersectionOf/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/owl:intersectionOf/rdf:rest*/rdf:first \
         ) ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
@@ -469,7 +504,8 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
     { \
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} "#{conceptCode}" . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?x_concept owl:equivalentClass ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
@@ -483,7 +519,41 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
     { \
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} "#{conceptCode}" . \
-      ?x_concept (owl:equivalentClass|rdfs:subClassOf)/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+      ?x_concept rdfs:subClassOf ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      ?x_concept owl:equivalentClass ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
+        ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
+          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
+        ) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+    } \
+    UNION \
+    { \
+      ?x_concept a owl:Class . \
+      ?x_concept #{codeCode} "#{conceptCode}" . \
+      ?x_concept rdfs:subClassOf ?z . \
+      ?z (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/ \
         ( (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first | \
           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
         ) ?rs . \
@@ -571,10 +641,10 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
-      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
       ?x_concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
@@ -589,10 +659,10 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
-      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
       ?x_concept #{codeCode} ?conceptCode . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?x_concept #{preferredNameCode} ?conceptLabel } . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
@@ -600,6 +670,7 @@ roles.all.complex=SELECT ?conceptCode ?conceptLabel ?relationship ?relationshipC
 }
 
 roles.all.complex.chebi=SKIP
+roles.all.complex.hgnc=SKIP
 
 # relationship label is bound to "disjointWith"
 disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
