roles and associations fixed, need properties

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -807,6 +807,8 @@ all.associations=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
     ?property rdfs:range xml:anyURI \
+    ?x ?property ?y . \
+    ?x a owl:Class . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
   } \
@@ -815,6 +817,8 @@ all.associations=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 all.roles=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:ObjectProperty . \
+    ?x a owl:Restriction . \
+    ?x owl:onProperty ?property . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
   } \
