--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -806,7 +806,7 @@ all.properties.never.used=SELECT DISTINCT ?property ?propertyCode \
 all.associations=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
-    ?property rdfs:range xml:anyURI \
+    ?property rdfs:range xml:anyURI . \
     ?x ?property ?y . \
     ?x a owl:Class . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
