Revert "Merge in progress develop 1.8 changes into develop (#169)"
This reverts commit 84803d0a6b2d7cddd639f04d2892fb675357d392.

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -806,9 +806,7 @@ all.properties.never.used=SELECT DISTINCT ?property ?propertyCode \
 all.associations=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:AnnotationProperty . \
-    ?property rdfs:range xml:anyURI . \
-    ?x ?property ?y . \
-    ?x a owl:Class . \
+    ?property rdfs:range xml:anyURI \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
   } \
@@ -817,8 +815,6 @@ all.associations=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 all.roles=SELECT DISTINCT ?property ?propertyCode ?propertyLabel \
 { GRAPH <#{namedGraph}> \
   { ?property a owl:ObjectProperty . \
-    ?x a owl:Restriction . \
-    ?x owl:onProperty ?property . \
     OPTIONAL { ?property #{preferredNameCode} ?propertyLabel } . \
     OPTIONAL { ?property #{codeCode} ?propertyCode } . \
   } \
