--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -87,3 +87,10 @@ nci:
         port: ${ES_PORT:9200}
         scheme: ${ES_SCHEME:http}
       timeout: 240000
+
+# Springdoc
+springdoc:
+    swagger-ui:
+        tagsSorter: alpha
+        operationsSorter: method
+        doc-expansion: none
