--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -92,5 +92,5 @@ nci:
 springdoc:
     swagger-ui:
         tagsSorter: alpha
-        operationsSorter: method
+        operationsSorter: alpha
         doc-expansion: none
