--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -66,6 +66,7 @@ nci:
       metricsEnabled:   ${METRICS_ENABLED:false}
       metricsDir: ${METRICS_DIR}
       configBaseUri: ${CONFIG_BASE_URI:https://raw.githubusercontent.com/NCIEVS/evsrestapi-operations/main/config/metadata}
+      uiLicense: ${UI_LICENSE:ui-license}
     bulkload:
       conceptsDir: ${NCI_EVS_BULK_LOAD_CONCEPTS_DIR:/tmp/}
       lockFile: ${NCI_EVS_BULK_LOAD_LOCK_FILE_NAME:DownloadSuccessfull.lck}
