--- a/build.gradle
+++ b/build.gradle
@@ -111,6 +111,7 @@ test {
     testLogging.showStandardStreams = true
 }
 
+// # for this, the cuis with listed sources will have hierarchies computed
 // ./gradlew rrfSample -Pterminology=ICD10CM,ICD9CM,SNOMEDCT_US,RXNORM,LNC,MDR -PlistFile=src/main/resources/cuis.txt -PinputPath=../data/NCIM
 task rrfSample(type: JavaExec) {
    classpath = sourceSets.main.runtimeClasspath
@@ -118,7 +119,7 @@ task rrfSample(type: JavaExec) {
    systemProperties System.getProperties()
    // arguments to pass to the application
    args ("rrfSample", inputPath, listFile, terminology)
-   jvmArgs "-Xmx4G"
+   jvmArgs "-Xmx8G"
 }
 
 
