--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
     ext {
-		springBootVersion = '2.2.4.RELEASE'
+		springBootVersion = '2.7.17'
+        // Remove this line to see what version is favored by springBootVersion
+        // and the version brought in by spring-data-elasticsearch
+        set('elasticsearch.version', '7.12.1')
 	}
     repositories {
         jcenter()
@@ -13,6 +16,15 @@ buildscript {
     dependencies {
         classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
     }
+}
+
+plugins {
+    id 'java'
+    id 'eclipse'
+    id 'war'
+    id 'org.springframework.boot' version '2.7.17'
+    id 'io.spring.dependency-management' version '1.1.3'
+    id 'maven-publish'
 }
 
 repositories {
@@ -40,25 +52,12 @@ ext {
   }
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'war'
-apply plugin: 'org.springframework.boot'
-/*
- * The dependency management plugin remains a transitive dependency of spring-boot-gradle-plugin
- * so there’s no need for it to be listed as a classpath dependency in the buildscript configuration.
- */
-apply plugin: 'io.spring.dependency-management'
-apply plugin: 'maven'
-apply plugin: 'maven-publish'
-
-
 /* Version info */
 group = "gov.nih.nci.evs.api"
 version = "1.10.0.RELEASE"
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 springBoot {
     // generate file META-INF/build-info.properties during the build
@@ -66,67 +65,37 @@ springBoot {
 }
 
 dependencies {
-   
-    compile 'org.springframework.boot:spring-boot-starter-web'       
-    compile 'org.springframework.boot:spring-boot-devtools'
-    compile 'org.springframework.boot:spring-boot-starter-actuator'  
-    compile 'org.springframework.boot:spring-boot-starter-cache'
+
 	// Use version 2 with spring boot 3
 	// custom location => springdoc.swagger-ui.path=/swagger-ui/index.html
-    compile ("org.springdoc:springdoc-openapi-ui:1.7.0") {
+    implementation("org.springdoc:springdoc-openapi-ui:1.7.0") {
        exclude group: "org.webjars", module: "swagger-ui"
-    }   
-             
-    // compile "io.springfox:springfox-boot-starter:3.0.0"
-    // Override spring-core version to handle vulnerabilities
-	compile 'org.springframework:spring-core:5.2.22.RELEASE'
-    compile 'com.google.guava:guava:20.0'
-    compile 'commons-io:commons-io:2.6'
-    compile 'org.springframework.boot:spring-boot-properties-migrator'
-    compile 'org.springframework:spring-aop'
-    compile 'org.aspectj:aspectjweaver:1.9.2'
-    compile 'org.apache.commons:commons-text:1.8'
-    compile 'javax.cache:cache-api:1.1.1'
-    compile 'org.ehcache:ehcache:3.8.1'
-    compile 'org.springframework.data:spring-data-elasticsearch:3.2.0.RELEASE'
-    compile 'commons-cli:commons-cli:1.4'
-    compile 'cglib:cglib:2.2.2'
-    compile 'com.maxmind.geoip2:geoip2:2.15.0'
-    compile 'org.apache.opennlp:opennlp-tools:2.2.0'
-    
-    compile ("ca.uhn.hapi.fhir:hapi-fhir-base:6.8.3") {
-      exclude group: "com.google.guava", module: "guava"
     }
-    compile ("com.fasterxml.jackson.core:jackson-core:2.15.2") {
-      exclude group: "com.google.guava", module: "guava"
-	}
-	compile ("ca.uhn.hapi.fhir:hapi-fhir-structures-r4:6.8.3") {
-      exclude group: "com.google.guava", module: "guava"
-    }
-    compile ("ca.uhn.hapi.fhir:hapi-fhir-server:6.8.3") {
-      exclude group: "com.google.guava", module: "guava"
-    }
-    compile ("ca.uhn.hapi.fhir:hapi-fhir-jpaserver-base:6.8.3") {
-      exclude group: "ca.uhn.hapi.fhir", module: "hapi-fhir-sql-migrate"
-      exclude group: "org.elasticsearch.client", module: "elasticsearch-rest-high-level-client"
-      exclude group: "org.hibernate.search"
-      exclude group: "org.apache.lucene"
-      exclude group: "com.github.jsonld-java", module: "jsonld-java"
-      exclude group: "com.graphql-java", module: "graphql-java"
-      exclude group: "org.glassfish", module: "javax.el"
-      exclude group: "org.apache.logging.log4j", module: "log4j-to-slf4j"
-      exclude group: "com.google.guava", module: "guava"
-    }
-    compile ("ca.uhn.hapi.fhir:hapi-fhir-server-openapi:6.8.3") {
-       exclude group: "com.google.guava", module: "guava"
-    }
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-devtools'
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'org.springframework.boot:spring-boot-properties-migrator'
+    implementation 'org.springframework:spring-aop'
+    implementation 'org.springframework.data:spring-data-elasticsearch:4.2.12'
+
+    implementation 'com.google.guava:guava:32.1.3-jre'
+    implementation 'org.aspectj:aspectjweaver:1.9.2'
+    implementation 'org.apache.commons:commons-text:1.10.0'
+    implementation 'org.apache.opennlp:opennlp-tools:2.2.0'
+    implementation 'org.ehcache:ehcache:3.8.1'
+    implementation 'javax.cache:cache-api:1.1.1'
+    implementation 'commons-io:commons-io:2.14.0'
+    implementation 'commons-cli:commons-cli:1.4'
+    implementation 'cglib:cglib:2.2.2'
+    implementation 'com.maxmind.geoip2:geoip2:2.15.0'
 
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
     /*
      * Test Dependencies
     */
-    testCompile 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly "org.junit.platform:junit-platform-commons:1.7.0"
     testRuntimeOnly "org.junit.platform:junit-platform-runner:1.7.0"
 
@@ -142,17 +111,17 @@ test {
 
 // # for this, the cuis with listed sources will have hierarchies computed
 // ./gradlew rrfSample -Pterminology=NCIMTH,ICD10CM,ICD9CM,SNOMEDCT_US,RXNORM,LNC,MDR,RADLEX -PlistFile=src/main/resources/cuis.txt -PinputPath=../data/NCIM
-task rrfSample(type: JavaExec) {
-   classpath = sourceSets.main.runtimeClasspath
-   main = "gov.nih.nci.evs.api.service.SamplingApplication"
-   systemProperties System.getProperties()
-   // arguments to pass to the application
-   args ("rrfSample", inputPath, listFile, terminology)
-   jvmArgs "-Xmx8G"
+tasks.register('rrfSample', JavaExec) {
+    classpath = sourceSets.main.runtimeClasspath
+    main = "gov.nih.nci.evs.api.service.SamplingApplication"
+    systemProperties System.getProperties()
+    // arguments to pass to the application
+    args("rrfSample", inputPath, listFile, terminology)
+    jvmArgs "-Xmx8G"
 }
 
 
-task zipFile(type: Zip) {
+tasks.register('zipFile', Zip) {
     def zipFileRootDirectory = "${project.name}-${project.version}"
 
     from('src/main/bin') {
@@ -165,7 +134,7 @@ task zipFile(type: Zip) {
         into "$zipFileRootDirectory/bin"
     }
     from('src/main/config') {
-        into "${baseName}-${project.version}/config"
+        into "${archiveBaseName}-${project.version}/config"
         into "$zipFileRootDirectory/config"
     }
     from("$buildDir/main/config") {
@@ -186,9 +155,12 @@ bootJar {
     manifest {
     	attributes 'Start-Class': 'gov.nih.nci.evs.api.service.LoaderServiceImpl'
     }
+    // Handle duplicate copying more than one file tot he same destination
+    // https://docs.gradle.org/8.2.1/dsl/org.gradle.api.tasks.Copy.html#org.gradle.api.tasks.Copy:duplicatesStrategy
+    duplicatesStrategy(DuplicatesStrategy.EXCLUDE)
 }
 
 zipFile.dependsOn = [ bootWar, bootJar ]
 build.dependsOn = [ test, bootWar, bootJar, zipFile ]
-install.dependsOn = [ bootWar, bootJar, zipFile ]
+publishToMavenLocal.dependsOn = [ bootWar, bootJar, zipFile ]
 
