Removed all circular dependencies. Fixed Caching issue

--- a/build.gradle
+++ b/build.gradle
@@ -89,6 +89,8 @@ dependencies {
     implementation 'commons-cli:commons-cli:1.4'
     implementation 'cglib:cglib:2.2.2'
     implementation 'com.maxmind.geoip2:geoip2:2.15.0'
+    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.1'
 
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
