--- a/build.gradle
+++ b/build.gradle
@@ -87,8 +87,8 @@ dependencies {
     implementation 'javax.cache:cache-api:1.1.1'
     implementation 'commons-io:commons-io:2.14.0'
     implementation 'commons-cli:commons-cli:1.4'
-    implementation 'cglib:cglib:2.2.2'
-    implementation 'com.maxmind.geoip2:geoip2:2.15.0'
+    implementation 'cglib:cglib:3.3.0'
+    //implementation 'com.maxmind.geoip2:geoip2:2.15.0'
 
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
