Fixed issue with character encoding when loading Samples

--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -40,6 +40,11 @@ info:
 test:
   conceptCodeList: ${CONCEPT_CODE_LIST:C7073}
 
+logging:
+    level:
+        org.springframework: ${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK:WARN}
+        gov.nih.nci.evs.api: ${LOGGING_LEVEL_GOV_NIH_NCI_EVS_API:INFO}
+
 #
 # Spring Properties
 #
