--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -1,6 +1,5 @@
 #
-# Spring Properties - copied from application-local to ensure our credentials aren't being pulled from
-# application.yml while running tests
+# Spring Properties - copied from application-local
 #
 spring:
     #
@@ -39,11 +38,6 @@ info:
 #
 test:
   conceptCodeList: ${CONCEPT_CODE_LIST:C7073}
-
-logging:
-    level:
-        org.springframework: ${LOGGING_LEVEL_ORG_SPRINGFRAMEWORK:WARN}
-        gov.nih.nci.evs.api: ${LOGGING_LEVEL_GOV_NIH_NCI_EVS_API:INFO}
 
 #
 # Spring Properties
