--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -495,7 +495,7 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
       ?rs owl:onProperty ?relationship . \
       ?rs owl:someValuesFrom ?relatedConcept . \
       ?relatedConcept a owl:Class . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel }     . \
       ?relatedConcept #{codeCode} ?relatedConceptCode . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
@@ -713,8 +713,8 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
         OPTIONAL { ?child #{codeCode} ?childCode } . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } . \
-        FILTER (!isBNode(?parent)) . \
-        FILTER (!isBNode(?child)) \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
       } \
     } \
     UNION \
@@ -730,8 +730,8 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
         OPTIONAL { ?child #{codeCode} ?childCode } . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } . \
-        FILTER (!isBNode(?parent)) . \
-        FILTER (!isBNode(?child)) \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
       } \
     } \
     UNION \
@@ -747,8 +747,8 @@ hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel 
         OPTIONAL { ?child #{codeCode} ?childCode } . \
         OPTIONAL { ?parent #{preferredNameCode} ?parentLabel } . \
         OPTIONAL { ?parent #{codeCode} ?parentCode } . \
-        FILTER (!isBNode(?parent)) . \
-        FILTER (!isBNode(?child)) \
+        FILTER (!isBlank(?parent)) . \
+        FILTER (!isBlank(?child)) \
       } \
     } \
   } \
@@ -856,7 +856,7 @@ all.concepts.without.code=SELECT ?concept ?conceptCode ?conceptLabel \
         OPTIONAL { ?concept #{preferredNameCode} ?conceptLabel } . \
         FILTER NOT EXISTS { ?concept #{codeCode} ?conceptCode } . \
         FILTER NOT EXISTS { ?concept owl:deprecated "true"^^xsd:boolean } . \
-        FILTER (!isBNode(?concept)) \
+        FILTER (!isBlank(?concept)) \
     } \
 } \
 ORDER BY ?x_conceptCode 
