--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -66,14 +66,14 @@ nci:
     bulkload:
       conceptsDir: ${NCI_EVS_BULK_LOAD_CONCEPTS_DIR:/tmp/}
       lockFile: ${NCI_EVS_BULK_LOAD_LOCK_FILE_NAME:DownloadSuccessfull.lck}
-      downloadBatchSize: ${NCI_EVS_BULK_LOAD_DOWNLOAD_BATCH_SIZE:1000}
-      indexBatchSize: ${NCI_EVS_BULK_LOAD_INDEX_BATCH_SIZE:1000}
+      downloadBatchSize: ${NCI_EVS_BULK_LOAD_DOWNLOAD_BATCH_SIZE:100}
+      indexBatchSize: ${NCI_EVS_BULK_LOAD_INDEX_BATCH_SIZE:100}
       stardogDbs: ${STARDOG_DBS:CTRP,NCIT2}
     stardog:
       host: ${STARDOG_HOST:localhost}
       port: ${STARDOG_PORT:5820}
       db: ${STARDOG_DB:NCIT2}
-      queryUrl: http://${nci.evs.stardog.host}:${nci.evs.stardog.port}/${nci.evs.stardog.db}/query
+      queryUrl: https://${nci.evs.stardog.host}:${nci.evs.stardog.port}/sparql
       username: admin
       password: admin
       readTimeout: 30000
