--- a/build.gradle
+++ b/build.gradle
@@ -130,11 +130,11 @@ spotless {
     java {
         // apply a specific flavor of google-java-format
         googleJavaFormat('1.19.2').reflowLongStrings().formatJavadoc(true).reorderImports(true).groupArtifact('com.google.googlejavaformat:google-java-format')        // fix formatting of type annotations
-        formatAnnotations()
+//        formatAnnotations()
         // make sure every file has the following copyright header.
         // optionally, Spotless can set copyright years by digging
         // through git history (see "license" section below)
-        // licenseHeader '/* (C)$YEAR */'
+//        licenseHeader '/* (C)$YEAR */'
     }
 }
 
