--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -22,7 +22,7 @@ PREFIX HGNC:<http://ncicb.nci.nih.gov/genenames.org/HGNC.owl#>
 prefix.go=PREFIX obo1:<http://purl.obolibrary.org/obo> \
 PREFIX GO:<http://purl.obolibrary.org/obo/go.owl>
 
-all.graph.names=SELECT DISTINT ?graphName { graph ?graphName {?s ?p ?o} }
+all.graph.names=SELECT DISTINCT ?graphName { graph ?graphName {?s ?p ?o} }
 
 # This assumes if owl:versionInfo is present there is at most one rdfs:comment
 # otherwise, the ?comment is picked up via the "description" field in the config .json file
