--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -88,6 +88,8 @@ nci:
         port: ${ES_PORT:9200}
         scheme: ${ES_SCHEME:http}
       timeout: 240000
+    sparql:
+      timeoutSeconds: 30
 
 # Springdoc
 springdoc:
