--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -3,31 +3,31 @@
 # Test Properties
 #
 test:
-    conceptCodeList: ${CONCEPT_CODE_LIST:C7073}
+  conceptCodeList: ${CONCEPT_CODE_LIST:C7073}
 
 #
 # Spring Properties
 #
 spring:
-    #
-    # Application Properties
-    #
-    application:
-        name: nci-evs-api
-    #profiles:
-    #  include: metadata
+  #
+  # Application Properties
+  #
+  application:
+    name: nci-evs-api
+  #profiles:
+  #  include: metadata
 
-    #
-    # JSON Formatting Properties
-    #
-    jackson:
-        serialization:
-            INDENT_OUTPUT: true
+  #
+  # JSON Formatting Properties
+  #
+  jackson:
+    serialization:
+      INDENT_OUTPUT: true
 
-    # ehcache configuration
-    cache:
-        jcache:
-            config: classpath:ehcache.xml
+  # ehcache configuration
+  cache:
+    jcache:
+      config: classpath:ehcache.xml
 
 management:
   endpoints:
@@ -36,37 +36,37 @@ management:
         include: heapdump,liquibase,loggers,prometheus,threaddump,info,metrics,health
 
 info:
-    app:
-        name: NCI EVS API
-        version: 1.0.0.RELEASE
+  app:
+    name: NCI EVS API
+    version: 1.0.0.RELEASE
 
 #
 # Logging Properties
 #
 logging:
-    level:
-        org.springframework: WARN
-        gov.nih.nci.evs.api: DEBUG
-        org.springframework.data.elasticsearch.core: DEBUG
-        gov.nih.nci.evs.api.configuration.EVSElasticsearchRestTemplate: DEBUG
-        org.apache.http: INFO # change to DEBUG when needed but INFO for now to avoid logspam
+  level:
+    org.springframework: WARN
+    gov.nih.nci.evs.api: DEBUG
+    org.springframework.data.elasticsearch.core: DEBUG
+    gov.nih.nci.evs.api.configuration.EVSElasticsearchRestTemplate: DEBUG
+    org.apache.http: INFO # change to DEBUG when needed but INFO for now to avoid logspam
 
 #
 # Server Properties
 #
 server:
-    port: ${EVS_SERVER_PORT:8082}
-    servlet:
-       context-path: /
-       session:
-        persistent: false
+  port: ${EVS_SERVER_PORT:8082}
+  servlet:
+    context-path: /
+    session:
+      persistent: false
 
 nci:
   evs:
     application:
       adminKey: ${NCI_EVS_ADMIN_KEY:Default}
       contextPath: /api/v1
-      metricsEnabled:   ${METRICS_ENABLED:true}
+      metricsEnabled: ${METRICS_ENABLED:true}
       metricsDir: ${METRICS_DIR:/tmp}
       configBaseUri: ${CONFIG_BASE_URI:https://raw.githubusercontent.com/NCIEVS/evsrestapi-operations/develop/config/metadata}
       uiLicense: ${UI_LICENSE:ui-license}
@@ -91,11 +91,12 @@ nci:
         port: ${ES_PORT:9200}
         scheme: ${ES_SCHEME:http}
       timeout: 200000
+    sparql:
+      timeoutSeconds: 5
 
 # Springdoc
 springdoc:
-    swagger-ui:
-        tagsSorter: alpha
-        operationsSorter: alpha
-        doc-expansion: none
-
+  swagger-ui:
+    tagsSorter: alpha
+    operationsSorter: alpha
+    doc-expansion: none
