--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
     id 'java'
     id 'eclipse'
     id 'war'
-    id 'org.springframework.boot' version '2.7.17'
+    id 'org.springframework.boot' version "${springBootVersion}"
     id 'io.spring.dependency-management' version '1.1.3'
     id 'maven-publish'
     // google java format gradle plugin
