--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -8,7 +8,7 @@ PREFIX oboInOwl:<http://www.geneontology.org/formats/oboInOwl#> \
 PREFIX xml:<http://www.w3.org/2001/XMLSchema#>
 
 prefix.graph=PREFIX :<#{source}#> \
-PREFIX base:<#{source}>
+PREFIX base:<#{source}#>
 
 prefix.chebi=PREFIX :<http://purl.obolibrary.org/obo/chebi.owl#> \
 PREFIX base:<http://purl.obolibrary.org/obo/chebi.owl#> \
