--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -466,19 +466,36 @@ inverse.roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?r
 # ?concept and ?relatedConcept both must have a code
 inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
-  { \
-      ?relatedConcept a owl:Class . \
-      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
-      ?rs a owl:Restriction . \
-      ?rs owl:onProperty ?relationship . \
-      ?rs owl:someValuesFrom ?x_concept . \
-      ?x_concept a owl:Class . \
-      ?x_concept #{codeCode} ?conceptCode . \
-      FILTER (?conceptCode IN (#{inClause})) . \
-      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
-      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
-      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	{ \
+	  { \
+	      ?relatedConcept a owl:Class . \
+	      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+	      ?rs a owl:Restriction . \
+	      ?rs owl:onProperty ?relationship . \
+	      ?rs owl:someValuesFrom ?x_concept . \
+	      ?x_concept a owl:Class . \
+	      ?x_concept #{codeCode} ?conceptCode . \
+	      FILTER (?conceptCode IN (#{inClause})) . \
+	      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+	      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+	      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	  } \
+	  UNION \
+	  { \
+	      ?relatedConcept a owl:Class . \
+	      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+	      ?rs a owl:Restriction . \
+	      ?rs owl:onProperty ?relationship . \
+	      ?rs owl:someValuesFrom ?x_concept . \
+	      ?x_concept a owl:Class . \
+	      FILTER (?x_concept IN (#{aboutClause})) . \
+	      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+	      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+	      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+	      FILTER NOT EXISTS { ?x_concept #{codeCode} ?x_code } \
+	  } \
   } \
 }
 #           (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
@@ -593,6 +610,7 @@ roles.chebi=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedCo
 # ?concept and ?relatedConcept both must have a code
 roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 { GRAPH <#{namedGraph}> \
+ { \
   { \
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} ?conceptCode . \
@@ -607,7 +625,24 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
   } \
-}
+  UNION \
+  { \
+      ?x_concept a owl:Class . \
+      FILTER (?x_concept IN (#{aboutClause})) . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+      FILTER NOT EXISTS { ?x_concept #{codeCode} ?conceptCode } \
+  } \
+ } \
+}  
+
 #          (owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first/(owl:unionOf|owl:intersectionOf)/rdf:rest*/rdf:first \
 # ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
