bug fix in roles/inverseRoles

--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -494,7 +494,8 @@ inverse.roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relatio
 	      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
 	      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
 	      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-	      FILTER NOT EXISTS { ?x_concept #{codeCode} ?x_code } \
+	      FILTER NOT EXISTS { ?x_concept #{codeCode} ?x_code } . \
+	      BIND(?x_concept AS ?conceptCode) \
 	  } \
   } \
 }
@@ -638,7 +639,8 @@ roles.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLab
       OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
-      FILTER NOT EXISTS { ?x_concept #{codeCode} ?conceptCode } \
+      FILTER NOT EXISTS { ?x_concept #{codeCode} ?conceptCode } . \
+      BIND(?x_concept AS ?conceptCode) \
   } \
  } \
 }  
