--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -376,6 +376,21 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
     UNION \
     { \
       ?relatedConcept a owl:Class . \
+      ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?x_concept . \
+      ?x_concept a owl:Class . \
+      FILTER(?x_concept = #{conceptCode}) . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
+      BIND(?x_concept AS ?conceptCode) \
+	} \
+    UNION \
+    { \
+      ?relatedConcept a owl:Class . \
       ?relatedConcept (owl:equivalentClass|rdfs:subClassOf) ?z . \
       ?z owl:unionOf/rdf:rest*/rdf:first ?rs . \
       ?rs a owl:Restriction . \
@@ -518,6 +533,20 @@ roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept 
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
+    UNION \
+  	{ \
+      ?x_concept a owl:Class . \
+      FILTER(?x_concept = #{conceptCode}) . \
+      ?x_concept (owl:equivalentClass|rdfs:subClassOf) ?rs . \
+      ?rs a owl:Restriction . \
+      ?rs owl:onProperty ?relationship . \
+      ?rs owl:someValuesFrom ?relatedConcept . \
+      ?relatedConcept a owl:Class . \
+      OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+      OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
+      OPTIONAL { ?relationship #{codeCode} ?relationshipCode } \
+	} \
     UNION \
     { \
       ?x_concept a owl:Class . \
