--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -33,6 +33,7 @@ all.graphs.and.versions=SELECT DISTINCT ?source ?graphName ?version ?date ?comme
     { \
       ?source a owl:Ontology . \
       ?source owl:versionInfo ?version \
+      FILTER (?source NOT IN (<http://purl.obolibrary.org/obo/iao.owl>)) . \
       OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } \
       OPTIONAL { ?source (rdfs:comment) ?comment} \
     } \
@@ -40,6 +41,7 @@ all.graphs.and.versions=SELECT DISTINCT ?source ?graphName ?version ?date ?comme
     { \
       ?source a owl:Ontology . \
       ?source owl:versionIRI ?version . \
+      FILTER (?source NOT IN (<http://purl.obolibrary.org/obo/iao.owl>)) . \
       OPTIONAL { ?source (dc:date|oboInOwl:date) ?date } . \
       FILTER NOT EXISTS { ?source owl:versionInfo ?x_versionInfo } \
     } \
@@ -753,14 +755,26 @@ disjoint.with=SELECT ?relatedConcept ?relatedConceptLabel ?relatedConceptCode \
 # relationship label is bound to "disjointWith"
 disjoint.with.batch=SELECT ?conceptCode ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
-  { \
-    ?x a owl:Class . \
-    ?x #{codeCode} ?conceptCode . \
-    FILTER (?conceptCode IN (#{inClause})) . \
-    ?x owl:disjointWith ?relatedConcept . \
-    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
-  } \
+	{ \
+	  { \
+	    ?x a owl:Class . \
+	    ?x #{codeCode} ?conceptCode . \
+	    FILTER (?conceptCode IN (#{inClause})) . \
+	    ?x owl:disjointWith ?relatedConcept . \
+	    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+	  } \
+	  UNION \
+	  { \
+	    ?x a owl:Class . \
+	    FILTER (?x IN (#{aboutClause})) . \
+	    ?x owl:disjointWith ?relatedConcept . \
+	    OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
+	    OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode } . \
+	    FILTER NOT EXISTS { ?x #{codeCode} ?conceptCode } . \
+	    BIND(?x AS ?conceptCode) \
+	  } \
+	 } \
 }
 #ORDER BY ?conceptCode
 
