--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -359,7 +359,7 @@ inverse.associations.batch=SELECT ?conceptCode ?relationship ?relationshipCode ?
 #ORDER BY ?conceptCode ?relationship ?relatedConceptLabel
 
 # ?concept and ?relatedConcept both must have a code
-inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
+inverse.roles=SELECT ?conceptCode ?relationship ?relationshipCode ?relationshipLabel ?relatedConcept ?relatedConceptCode ?relatedConceptLabel \
 { GRAPH <#{namedGraph}> \
   { \
     { \
@@ -371,7 +371,7 @@ inverse.roles=SELECT ?relationship ?relationshipCode ?relationshipLabel ?related
       ?x_concept a owl:Class . \
       ?x_concept #{codeCode} "#{conceptCode}" . \
       OPTIONAL { ?relatedConcept #{preferredNameCode} ?relatedConceptLabel } . \
-      ?relatedConcept #{codeCode} ?relatedConceptCode . \
+      OPTIONAL { ?relatedConcept #{codeCode} ?relatedConceptCode . } \
       OPTIONAL { ?relationship #{preferredNameCode} ?relationshipLabel } . \
       OPTIONAL { ?relationship #{codeCode} ?relationshipCode } . \
     } \
