--- a/src/main/resources/sparql-queries.properties
+++ b/src/main/resources/sparql-queries.properties
@@ -781,7 +781,7 @@ disjoint.with.batch=SELECT ?conceptCode ?relatedConcept ?relatedConceptCode ?rel
 # (1) owl:Class|rdfs:subClassOf|owl:Class
 # (2) owl:Class|owl:equivalentClass|owl:Class|owl:intersectionOf|owl:Class
 # (3) owl:Class|rdfs:subClassOf|owl:Class|owl:intersectionOf|owl:Class
-hierarchy=SELECT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
+hierarchy=SELECT DISTINCT ?parent ?parentCode ?parentLabel ?child ?childCode ?childLabel \
 { GRAPH <#{namedGraph}> \
   { \
     { \
